gcc/testsuite/g++.dg/diagnostic/sys-narrow1.C
// { dg-do compile { target c++11 } }

// { dg-error "narrowing" "" { target *-*-* } 2 }
#include "sys-narrow.h"
